# meteo-cli

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: unittests.yaml
meteo_cli/: base.py  isd.py  main.py  normals.py  station.py
migrations/: 000001_initial.down.sql  000001_initial.up.sql
scripts/: dev.md  load.sh
tests/: test_meteo_cli.py
